src/test/deca/syntax/invalid/synt/chaine_incomplete.deca


"chaine pas finie
// @expected_output deca:3:0:
